Fixing white space

--- a/common/common.scss
+++ b/common/common.scss
@@ -1,8 +1,7 @@
 @import "str-to-list";
 
 $list: str-to-list("#{$categories_and_channels}", "|");
-$nested-list: (
-);
+$nested-list: ();
 
 @if $categories_and_channels !="" {
 
